removing shapes on mobile devices to avoid scroll glitch

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,7 +15,6 @@ body {
 .App {
   -webkit-animation: color-change-2x 6s linear infinite alternate both;
   animation: color-change-2x 6s linear infinite alternate both;
-  overflow-x: hidden;
 }
 
 @-webkit-keyframes color-change-2x {
@@ -40,6 +39,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   .intro {
     font-size: 38px;
     text-align: center;
@@ -50,7 +50,6 @@ main {
     border-radius: $spacing-sm;
     box-shadow: 0 0 10px $primary;
     margin: 0 $spacing-md;
-
     margin-top: -$header-height;
 
     &__focus {
@@ -131,7 +130,12 @@ h1 {
 .shapes {
   position: absolute;
   opacity: 0.1;
-  max-width: 100vw;
-  height: auto;
-  object-fit: cover;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+@media only screen and (max-width: 992px) {
+  .shapes {
+    display: none;
+  }
 }
